* Sun Jan 25 2015 Martin Kolman <martin.kolman@gmail.com> - 0.51.1
- add track logging support to the Qt 5 GUI
 - accessible from Tracks->Record
 - output to the GPX format
 - path to the tracklogs folder is shown
  - option to symlink the tracklogs folder to ~/Documents on Sailfish OS
 - robust dual temp file storage mechanism
 - tracklog are restored on next start if shutdown or crash occurs during logging
 - it is possible to pause started logging
 - proper landscape and protrait orientation layouts
 - keep alive support on Sailfish OS
  - this should assure uninterrupted track recording even with screen turned off
- make track logging Python 3 compatible
- improved track logging log messages
- fix free space dispplay on Android
- QML -> Python logging now should be able to handle any QML/Javascript objects
* Tue Jan 13 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.5
- make it possible to show the back button on Sailfish OS
 - can be enabled from Options->UI
- fix Sqlite tile storage with Qt 5 GUI
- fix the Animate switch to work correctly on Sailfish OS
- fix a few page push transitions that have not respected the animation setting in Qt 5 GUI
- fix back button in the detail menu of a POI restored on startup breaking the GTK GUI
- use proper logging during batch tile download
* Fri Jan 02 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.4
- the actual Python 2.5 compatibility fixes
* Thu Jan 01 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.3
- Python 2.5 compatibility fixes
* Thu Jan 01 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.2
- first official modRana release for Android! :)
- make theme parsing more robust
- fix window sizing regression on Sailfish OS
* Wed Dec 31 2014 Martin Kolman <martin.kolman@gmail.com> - 0.50.1
- layer timeout support (Frederic Ferner)
 - dynamic map layers (traffic, weather, etc.) now automatically load new tiles once the oled ones time out
 - not yet handles staring at the same part of map for hours